--- a/for tests.ipynb
+++ b/for tests.ipynb
@@ -56,8 +56,8 @@
     "            Result, data = reboot(s)\n",
     "            log_(s, Result, data)\n",
     "            if Result == True:\n",
-    "                requests.get('https://api.telegram.org/bot580440068:AAHS2uckeIu-ygxOKEvCaGrPExdK9COf_rA/sendmessage?chat_id=389354498&text=switches reboot initiated')\n",
-    "                break\n",
+    "                requests.get('https://api.telegram.org/%s:%s/sendmessage?chat_id=389354498&text=switches reboot initiated')\n",
+    "                break\n" %(aa,bb),
     "            time.sleep(5)\n",
     "            c += 1\n",
     "\n",
